Revision history for Spreadsheet-HTML

0.40

0.39
    - added sorted_attrs literal param

0.38
    - require HTML::AutoTag v0.07 (unsorted attributes)
    - added mario preset for beadwork()
    - no wantarray check for animate()

0.37
    - removed dk and shroom methods (now args to beadwork)
    - added beadwork (no useful API - simple refactor for now)
    - added mktable CLI tool
    - able to pass some custom args along to Handsontable JS
    - presets check for wantarray (client can get table w/out js)
    - added github hints to Makefile

0.36
    - fixed animate bug introduced at commit cba507b (v0.34)
    - added handson() preset
    - restructure of preset modules that use JS
    - added _auto internal param

0.35
    - added sudoku() preset
    - no thead or tfoot for matrix (only tbody)
    - can now emit multiple colgroup tags
    - added preserve attr for preserving attrs from loaded files
    - require HTML::AutoTag v0.06
    - chess and checkers have moving pieces
    - animate() no longer forces fx = 1

0.34
    - !API change: 
        -rowX is now -rX
        -colX is now -cX
        -rowXcolX is now -rXcX
    - refactored _process() (slight speed increase)
    - can style calendar by day
    - animate background and/or foreground
    - added wrap literal param
    - better handling of empty datas

0.33
    - added maze()
    - added calendar()
    - banner() does not wrap

0.32
    - added banner()
    - now using Spreadsheet::Read for csv,xls files
    - better data generation for checkers/chess
    - animate now copies cell styles across

0.31
    - updated docs example tables
    - added animate literal parameter

0.30
    - added animate
    - added timer for conway

0.29
    - new param for checkerboard: extra
    - conway impacts th tags now
    - better fade for conway
    - better overrides for presets

0.28
    - updated/corrected docs

0.27
    - Tag and Dynamic Parameters merge hash attrs now
    - updated docs